--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Makes news great again",
   "scripts": {
+    "test": "electron-mocha --renderer",
     "start": "node server.js"
   },
   "repository": {
@@ -14,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/joshski/make-news-great-again/issues"
   },
-  "homepage": "https://github.com/joshski/make-news-great-again#readme"
+  "homepage": "https://github.com/joshski/make-news-great-again#readme",
+  "devDependencies": {
+    "electron": "^1.4.15",
+    "electron-mocha": "^3.3.0"
+  }
 }
