--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,35 @@
 {
   "name": "Make News Great Again",
   "manifest_version": 2,
-  "version": "0.5",
-  "description": "Makes news great, again",
+  "version": "0.1",
+  "description": "Turns nasty news into fun news",
   "content_scripts": [{
-    "matches": [ "<all_urls>" ],
+    "matches": [
+      "*://*.bbc.co.uk/news*",
+      "*://*.bbc.com/news*",
+      "*://news.yahoo.com/*",
+      "*://news.google.com/*",
+      "*://*.huffingtonpost.com/*",
+      "*://*.cnn.com/*",
+      "*://*.nytimes.com/*",
+      "*://*.foxnews.com/*",
+      "*://*.dailymail.co.uk/*",
+      "*://*.washingtonpost.com/*",
+      "*://*.theguardian.com/*",
+      "*://*.wsj.com/*",
+      "*://abcnews.go.com/*",
+      "*://*.usatoday.com/*",
+      "*://*.latimes.com/*",
+      "*://*.indiatimes.com/*",
+      "*://*.bloomberg.com/*",
+      "*://*.reuters.com/*",
+      "*://*.forbes.com/*",
+      "*://*.time.com/*",
+      "*://*.indianexpress.com/*",
+      "*://*.cnbc.com/*",
+      "*://*.cbsnews.com/*",
+      "*://*.reddit.com/*"
+    ],
     "all_frames": true,
     "js": [
       "contentscript.js"
